// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typescript > applying to an ember app > works via CLI 1`] = `
" ember-cli-build.js |  4 +++-
 package.json       | 21 ++++++++++++++++++---
 2 files changed, 21 insertions(+), 4 deletions(-)"
`;

exports[`typescript > applying to an ember app > works via CLI 2`] = `
"diff --git a/ember-cli-build.js b/ember-cli-build.js
index 05ec071..b6a0374 100644
--- a/ember-cli-build.js
+++ b/ember-cli-build.js
@@ -5,7 +5,9 @@ const { setConfig } = require('@warp-drive/core/build-config');
 
 module.exports = function (defaults) {
   const app = new EmberApp(defaults, {
-    // Add options here
+    "ember-cli-babel": {
+      enableTypeScriptTransform: true
+    }
   });
 
   setConfig(app, __dirname, {

package.json
{
  "name": "test-app",
  "version": "0.0.0",
  "private": true,
  "description": "Small description for test-app goes here",
  "repository": "",
  "license": "MIT",
  "author": "",
  "directories": {
    "doc": "doc",
    "test": "tests"
  },
  "scripts": {
    "build": "ember build --environment=production",
    "format": "prettier . --cache --write",
    "lint": "concurrently \\"npm:lint:*(!fix)\\" --names \\"lint:\\" --prefixColors auto",
    "lint:css": "stylelint \\"**/*.css\\"",
    "lint:css:fix": "concurrently \\"npm:lint:css -- --fix\\"",
    "lint:fix": "concurrently \\"npm:lint:*:fix\\" --names \\"fix:\\" --prefixColors auto && npm run format",
    "lint:format": "prettier . --cache --check",
    "lint:hbs": "ember-template-lint .",
    "lint:hbs:fix": "ember-template-lint . --fix",
    "lint:js": "eslint . --cache",
    "lint:js:fix": "eslint . --fix",
    "start": "ember serve",
    "test": "concurrently \\"npm:lint\\" \\"npm:test:*\\" --names \\"lint,test:\\" --prefixColors auto",
    "test:ember": "ember test",
    "lint:types": "glint"
  },
  "devDependencies": [
    "@babel/core",
    "@babel/eslint-parser",
    "@babel/plugin-proposal-decorators",
    "@ember/optional-features",
    "@ember/test-helpers",
    "@embroider/macros",
    "@eslint/js",
    "@glimmer/component",
    "@glimmer/tracking",
    "@glint/core",
    "@glint/environment-ember-loose",
    "@glint/environment-ember-template-imports",
    "@glint/template",
    "@tsconfig/ember",
    "@types/qunit",
    "@types/rsvp",
    "@typescript-eslint/eslint-plugin",
    "@typescript-eslint/parser",
    "@warp-drive/core",
    "@warp-drive/json-api",
    "@warp-drive/legacy",
    "@warp-drive/utilities",
    "broccoli-asset-rev",
    "concurrently",
    "ember-auto-import",
    "ember-cli",
    "ember-cli-app-version",
    "ember-cli-babel",
    "ember-cli-clean-css",
    "ember-cli-dependency-checker",
    "ember-cli-deprecation-workflow",
    "ember-cli-htmlbars",
    "ember-cli-inject-live-reload",
    "ember-cli-sri",
    "ember-cli-terser",
    "ember-load-initializers",
    "ember-modifier",
    "ember-page-title",
    "ember-qunit",
    "ember-resolver",
    "ember-source",
    "ember-template-imports",
    "ember-template-lint",
    "eslint",
    "eslint-config-prettier",
    "eslint-plugin-ember",
    "eslint-plugin-n",
    "eslint-plugin-qunit",
    "eslint-plugin-warp-drive",
    "globals",
    "loader.js",
    "prettier",
    "prettier-plugin-ember-template-tag",
    "qunit",
    "qunit-dom",
    "stylelint",
    "stylelint-config-standard",
    "typescript",
    "webpack"
  ],
  "engines": [
    "node"
  ],
  "ember": {
    "edition": "octane"
  },
  "pnpm": {
    "overrides": {
      "@glimmer/manager": ">= 0.84.3",
      "@glimmer/validator": ">= 0.84.3"
    }
  }
}
"
`;

exports[`typescript > applying to an ember app > works with the default app blueprint 1`] = `
" ember-cli-build.js |  4 +++-
 package.json       | 19 ++++++++++++++++++-
 2 files changed, 21 insertions(+), 2 deletions(-)"
`;

exports[`typescript > applying to an ember app > works with the default app blueprint 2`] = `
"diff --git a/ember-cli-build.js b/ember-cli-build.js
index 05ec071..b6a0374 100644
--- a/ember-cli-build.js
+++ b/ember-cli-build.js
@@ -5,7 +5,9 @@ const { setConfig } = require('@warp-drive/core/build-config');
 
 module.exports = function (defaults) {
   const app = new EmberApp(defaults, {
-    // Add options here
+    "ember-cli-babel": {
+      enableTypeScriptTransform: true
+    }
   });
 
   setConfig(app, __dirname, {

package.json
{
  "name": "test-app",
  "version": "0.0.0",
  "private": true,
  "description": "Small description for test-app goes here",
  "repository": "",
  "license": "MIT",
  "author": "",
  "directories": {
    "doc": "doc",
    "test": "tests"
  },
  "scripts": {
    "build": "ember build --environment=production",
    "format": "prettier . --cache --write",
    "lint": "concurrently \\"npm:lint:*(!fix)\\" --names \\"lint:\\" --prefixColors auto",
    "lint:css": "stylelint \\"**/*.css\\"",
    "lint:css:fix": "concurrently \\"npm:lint:css -- --fix\\"",
    "lint:fix": "concurrently \\"npm:lint:*:fix\\" --names \\"fix:\\" --prefixColors auto && npm run format",
    "lint:format": "prettier . --cache --check",
    "lint:hbs": "ember-template-lint .",
    "lint:hbs:fix": "ember-template-lint . --fix",
    "lint:js": "eslint . --cache",
    "lint:js:fix": "eslint . --fix",
    "start": "ember serve",
    "test": "concurrently \\"npm:lint\\" \\"npm:test:*\\" --names \\"lint,test:\\" --prefixColors auto",
    "test:ember": "ember test",
    "lint:types": "glint"
  },
  "devDependencies": [
    "@babel/core",
    "@babel/eslint-parser",
    "@babel/plugin-proposal-decorators",
    "@ember/optional-features",
    "@ember/test-helpers",
    "@embroider/macros",
    "@eslint/js",
    "@glimmer/component",
    "@glimmer/tracking",
    "@glint/core",
    "@glint/environment-ember-loose",
    "@glint/environment-ember-template-imports",
    "@glint/template",
    "@tsconfig/ember",
    "@types/qunit",
    "@types/rsvp",
    "@typescript-eslint/eslint-plugin",
    "@typescript-eslint/parser",
    "@warp-drive/core",
    "@warp-drive/json-api",
    "@warp-drive/legacy",
    "@warp-drive/utilities",
    "broccoli-asset-rev",
    "concurrently",
    "ember-auto-import",
    "ember-cli",
    "ember-cli-app-version",
    "ember-cli-babel",
    "ember-cli-clean-css",
    "ember-cli-dependency-checker",
    "ember-cli-deprecation-workflow",
    "ember-cli-htmlbars",
    "ember-cli-inject-live-reload",
    "ember-cli-sri",
    "ember-cli-terser",
    "ember-data",
    "ember-load-initializers",
    "ember-modifier",
    "ember-page-title",
    "ember-qunit",
    "ember-resolver",
    "ember-source",
    "ember-template-imports",
    "ember-template-lint",
    "ember-welcome-page",
    "eslint",
    "eslint-config-prettier",
    "eslint-plugin-ember",
    "eslint-plugin-n",
    "eslint-plugin-qunit",
    "eslint-plugin-warp-drive",
    "globals",
    "loader.js",
    "prettier",
    "prettier-plugin-ember-template-tag",
    "qunit",
    "qunit-dom",
    "stylelint",
    "stylelint-config-standard",
    "typescript",
    "webpack"
  ],
  "engines": [
    "node"
  ],
  "ember": {
    "edition": "octane"
  },
  "pnpm": {
    "overrides": {
      "@glimmer/manager": ">= 0.84.3",
      "@glimmer/validator": ">= 0.84.3"
    }
  }
}
"
`;
